--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
             background: url('https://source.unsplash.com/1600x900/?new-moon,stars,fairy-tale') no-repeat center center/cover;
             color: white;
             padding: 20px;
+            overflow: hidden;
         }
         .container {
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
             display: inline-block;
+            position: relative;
+            animation: fadeIn 2s ease-in-out;
         }
         img {
             width: 100%;
             max-width: 500px;
             border-radius: 10px;
             margin-top: 20px;
+            animation: glow 3s infinite alternate;
         }
         button {
             background: gold;
@@ -31,6 +35,14 @@
             cursor: pointer;
             margin-top: 10px;
         }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes glow {
+            from { box-shadow: 0 0 5px gold; }
+            to { box-shadow: 0 0 20px gold; }
+        }
     </style>
 </head>
 <body>
@@ -38,12 +50,24 @@
         <h1>🌙 Ramadan Mubarak! 🌙</h1>
         <p>May this Ramadan bring peace, happiness, and countless blessings to you and your loved ones. May Allah accept from you and I, our righteous deeds. Ameen.</p>
         <img src="/mnt/data/A_beautiful_Ramadan_greeting_card_featuring_a_new_.png" alt="Ramadan Greeting Card">
+        <audio controls>
+            <source src="english_greeting.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <hr>
         <h1>🌙 Ramadan Moubarak ! 🌙</h1>
         <p>Que ce Ramadan vous apporte paix, bonheur et d'innombrables bénédictions. Qu'Allah accepte de vous et de moi nos bonnes actions. Amine.</p>
+        <audio controls>
+            <source src="french_greeting.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <hr>
         <h1>🌙 رمضان مبارك! 🌙</h1>
         <p>نسأل الله أن يجلب لكم هذا الشهر الفضيل السلام والسعادة والبركات. تقبل الله مني ومنكم صالح الأعمال. آمين.</p>
+        <audio controls>
+            <source src="arabic_greeting.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <button onclick="sharePage()">Share This Wish</button>
     </div>
     <script>
